# pyweek34

./: README.md  pyproject.toml
assets/: .gitignore
assets/levels/: pysa_headquarters.tmx  pysa_headquarters_rocket.tmx
assets/src/: barrier.kra
assets/src/pysahq/: dotted_concrete.kra  dotted_concrete_dark.kra  electric_puddle_1.kra  pysa_floor_tile.kra  pysa_wall_back.kra  pysa_wall_bottom_left_corner.kra  pysa_wall_bottom_left_corner_full.kra  pysa_wall_bottom_right_corner.kra  pysa_wall_bottom_right_corner_full.kra  pysa_wall_front.kra  pysa_wall_left.kra  pysa_wall_right.kra  pysa_wall_top.kra  pysa_wall_top_left_corner.kra  pysa_wall_top_left_corner_full.kra  pysa_wall_top_right_corner.kra  pysa_wall_top_right_corner_full.kra  rocket.kra  rocket_arrow.kra
assets/src/pysahq/rocket_catwalk/: catwalk_back_edge.kra  catwalk_back_edge_corner.kra  catwalk_floor.kra  catwalk_railing_back.kra  catwalk_railing_back_corner.kra  catwalk_railing_back_corner_2.kra  catwalk_railing_front.kra  catwalk_railing_front_corner.kra  catwalk_railing_front_corner_2.kra
assets/tiles/: PySaHQ.tsx
assets/tiles/pysahq/: PySaHQ_RocketCatwalk.tsx  electric_puddle_1.tsx
game/: __init__.py  game.py  lemming.py  level.py
